LPS-46809 - Fix device preview iframe covering up device border

--- a/portal-web/docroot/html/css/portal/device_preview.css
+++ b/portal-web/docroot/html/css/portal/device_preview.css
@@ -1,4 +1,5 @@
 @import "compass";
+@import "mixins";
 
 .lfr-device-preview-panel {
 	width: 220px;
@@ -33,6 +34,8 @@
 }
 
 .lfr-device {
+	@include box-sizing(content-box);
+
 	.modal-header {
 		display: none;
 	}
